# fix: anlytics # hide certain elements on smaller screen sizes

--- a/src/assets/stylus/views/main-landing.styl
+++ b/src/assets/stylus/views/main-landing.styl
@@ -44,11 +44,12 @@ header-height = 800px;
 
     .start-item {
         text-align: center;
+        padding-bottom: 50px;
     }
 
     #start {
         margin-top: 50px;
-        margin-bottom: 100px;
+        margin-bottom: 50px;
 
         .fa {
             color: #77BEF5 + 30%;
